examples/neg/high_loop_grow/alice.oio
ALICE

channel BOB/B1@{H} : int@{H} [ALICE/A1: 1;BOB/B1: 1;ALICE/A2: 1;BOB/B2: 1];

channel BOB/B2@{H} : int@{H} [ALICE/A2: 1;BOB/B2: 1];

A1@{H} (secret : int@{H}) [ALICE/A1: 1;BOB/B1: 1;ALICE/A2: 1;BOB/B2: 1] {
    send(BOB/B1, secret+1);
    send(BOB/B2, secret+1);
}

A2@{H} (secret : int@{H}) [ALICE/A2: 1; BOB/B2: 1] {
    print("ALICE/A2 received", secret);
    send(BOB/B2, secret+1);
}
